--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion '21.1.2'
+    compileSdkVersion 21
+    buildToolsVersion '22.0.1'
 
     defaultConfig {
         applicationId "com.optionalproject.spotifystreamer"
@@ -20,5 +20,11 @@ android {
 }
 
 dependencies {
+    compile 'com.squareup.retrofit:retrofit:1.9.0'
+    compile 'com.squareup.okhttp:okhttp:2.2.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
     compile fileTree(include: ['*.jar'], dir: 'libs')
+}
+repositories {
+    mavenCentral()
 }
