Add new Activity to show Album list from clicked artist in new list view

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,8 +20,8 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".TopTrackActivity"
-            android:label="@string/title_activity_top_track" >
+            android:name=".TopTracksMainActivity"
+            android:label="@string/title_activity_top_tracks_main">
         </activity>
     </application>
 
